# hermite

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  common.h  hermite.h  solver4th.h
.github/workflows/: main.yml
demo/: CMakeLists.txt  analyze_twobody.ipynb  result_of_analyze_twobody.html  twobody.cc
test/: CMakeLists.txt  gtest_solver4th.cc
